--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ main{
 .btn:hover{
     background-color: var(--selective-yellow);
 }
+#score{
+    color: var(--ut-orange);
+    border: 1px solid var(--selective-yellow);
+}
 .btn{
     background-color: var(--blue-green);
 }
